ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - "zsdevops01.store"
    - "*.zsdevops01.store"
    secretName: nginx-tls
  rules:
  - host: zsdevops01.store
    http:
      paths:
      - path: /
        backend:
          serviceName: YOUR-SERVICE
          servicePort: 80
